--- a/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
+++ b/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
@@ -28,7 +28,7 @@
             <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
          </titleStmt>
          <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
          <publicationStmt status="1.a">
@@ -68,7 +68,7 @@
             </bibl>
          </sourceDesc>
          <notesStmt>
-            <note type="lastUpdated" date-time="2022-12-12T18:00:25.893Z" user="admin">12/12/2022 18:00:25</note>
+            <note type="lastUpdated" date-time="2022-12-19T15:34:05.1Z" user="admin">19/12/2022 15:34:05</note>
             <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T08:42:54.93Z" user="line-tofte">0.0.1</note>
             <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">2.h</note>
             <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">Auto
@@ -116,6 +116,7 @@
              <note type="updated" update="text-version" value="1.0.1" date-time="2022-12-09T23:07:31.478Z" user="martina-cotter">Updated typo.</note>
              <note type="updated" update="text-version" value="1.0.2" date-time="2022-12-09T23:08:35.133Z" user="martina-cotter">Updated typo.</note>
              <note type="updated" update="text-version" value="1.0.3" date-time="2022-12-12T18:00:22.948Z" user="martina-cotter">Added tantra warning.</note>
+             <note type="updated" update="text-version" value="1.0.4" date-time="2022-12-19T15:34:02.16Z" user="konchog">Minor fixes and with Celso's help split two different 8-line verses into quatrains with their own milestone markers.</note>
          </notesStmt>
       </fileDesc>
    </teiHeader>
@@ -833,8 +834,8 @@
                <milestone unit="chunk" xml:id="UT22084-096-054-72"/>
                <lg tid="58">
                   <l>“Just as a burnt seed will never produce a sprout,</l>
-                  <l>Even if given soil, water, and time.</l>
-                  <l>Just so, a mind ruined by wrong views and ignorance</l>
+                  <l>Even if given soil, water, and time,</l>
+                  <l>A mind ruined by wrong views and ignorance</l>
                   <l>Will not give rise to virtuous qualities.</l>
                </lg>
                <milestone unit="chunk" xml:id="UT22084-096-054-73"/>
@@ -917,6 +918,9 @@
                            <title xml:lang="Bo-Ltn">de yi lus la lus kyi byin rlabs ’jug</title> (“the blessings of the
                         body enter their body”).</note>
                   </l>
+               </lg>
+               <milestone unit="chunk" xml:id="UT22084-096-054-1080"/>
+               <lg tid="515">
                   <l>“Devas, nāgas, asuras, yakṣas, and siddhas</l>
                   <l>Will flee in fear from those reciting,</l>
                   <l>Upon seeing their invulnerable vajra nature,</l>
@@ -1029,7 +1033,9 @@
                   <l>They should sing praises while offering fragrance, garlands, and lamps. </l>
                   <l>With deep faith they should perform worship,</l>
                   <l>Using parasols, banners, flags, and music.</l>
-                  <l> </l>
+               </lg>
+               <milestone unit="chunk" xml:id="UT22084-096-054-1081"/>
+               <lg tid="516">
                   <l>“A one-wheeled chariot will never move along a path</l>
                   <l>Even when harnessed to a horse.</l>
                   <l>So too a practitioner lacking an assistant<note place="end" xml:id="UT22084-096-054-104"> The term “assistant” (<foreign xml:lang="Bo-Ltn">grogs</foreign>;<foreign xml:lang="Bo-Ltn">
