--- a/translations/kangyur/placeholders/044-013_toh92-the_lions_roar_of_srimaladevi.xml
+++ b/translations/kangyur/placeholders/044-013_toh92-the_lions_roar_of_srimaladevi.xml
@@ -9,12 +9,12 @@
                 <title type="mainTitle" xml:lang="en">The Lion's Roar of Śrīmālādevī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo dpal phreng gi seng ge'i sgra zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaśrīmālādevīsiṃhanāda­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-58"/>
+                <author role="translatorMain" ref="contributors.xml#team-14"/>
                 <consultant role="projectManager" ref="contributors.xml#person-99">Thomas Cruijsen</consultant>
                 <author role="translatorEng" ref="contributors.xml#person-99">Thomas Cruijsen</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -33,13 +33,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-01-11T12:51:02.225Z" user="admin">11/01/2021 12:51:02</note>
+                <note type="lastUpdated" date-time="2021-10-14T07:13:02.486Z" user="admin">14/10/2021 07:13:02</note>
     <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:40:32.254Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:40:32.254Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:59:38.746Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T09:59:38.746Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T12:50:36.952Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T12:50:57.924Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.5" date-time="2021-10-14T07:12:57.463Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
