--- a/translations/kangyur/placeholders/071-005_toh291-the_great_sutra_on_great_emptiness.xml
+++ b/translations/kangyur/placeholders/071-005_toh291-the_great_sutra_on_great_emptiness.xml
@@ -9,12 +9,12 @@
                 <title type="mainTitle" xml:lang="en">The Great Sūtra on Great Emptiness</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mdo chen po stong pa nyid chen po zhes bya ba</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">mahāśūnyatānāmamahāsūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-58"/>
+                <author role="translatorMain" ref="contributors.xml#team-14"/>
                 <consultant role="projectManager" ref="contributors.xml#person-99">Thomas Cruijsen</consultant>
                 <author role="translatorEng" ref="contributors.xml#person-99">Thomas Cruijsen</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -33,13 +33,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-01-11T12:54:59.469Z" user="admin">11/01/2021 12:54:59</note>
+                <note type="lastUpdated" date-time="2021-10-14T07:21:53.479Z" user="admin">14/10/2021 07:21:53</note>
     <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:49:35.486Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:49:35.486Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-11-30T10:01:50.072Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T10:01:50.072Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T12:54:35.134Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T12:54:55.145Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.5" date-time="2021-10-14T07:21:48.397Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
