--- a/translations/kangyur/placeholders/076-006_toh352-the_sutra_of_brahmas_net.xml
+++ b/translations/kangyur/placeholders/076-006_toh352-the_sutra_of_brahmas_net.xml
@@ -7,12 +7,12 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshangs pa'i dra ba'i mdo/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">brahmajālasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Brahmā’s Net</title>
-                <author role="translatorMain" ref="contributors.xml#team-58"/>
+                <author role="translatorMain" ref="contributors.xml#team-14"/>
                 <consultant role="projectManager" ref="contributors.xml#person-99">Thomas Cruijsen</consultant>
                 <author role="translatorEng" ref="contributors.xml#person-99">Thomas Cruijsen</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -31,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-25T15:20:08.997Z" user="admin">25/05/2021 15:20:08</note>
+                <note type="lastUpdated" date-time="2021-10-14T07:15:59.378Z" user="admin">14/10/2021 07:15:59</note>
     <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:53:49.469Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:53:49.469Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-11-30T10:02:33.53Z" user="line-tofte">3</note>
@@ -39,6 +39,7 @@
     <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T12:56:13.636Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T12:56:31.912Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="0.0.5" date-time="2021-05-25T15:20:05.634Z" user="john">0.0.5</note>
+    <note type="updated" update="text-version" value="0.0.6" date-time="2021-10-14T07:15:54.225Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
