--- a/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
+++ b/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
@@ -31,7 +31,7 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.6 <date>2022</date>
+                <edition>v 1.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -72,7 +72,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-11-04T14:28:21.979Z" user="admin">04/11/2022 14:28:21</note>
+        <note type="lastUpdated" date-time="2022-12-20T21:50:56.879Z" user="admin">20/12/2022 21:50:56</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:52:10.736Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:52:10.736Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-09T08:10:37.707Z" user="line-tofte">2.h</note>
@@ -125,6 +125,7 @@
           <note type="updated" update="text-version" value="1.0.4" date-time="2022-10-16T10:19:30.049Z" user="sameer">Included in App v2.4</note>
           <note type="updated" update="text-version" value="1.0.5" date-time="2022-10-26T20:05:49.209Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
           <note type="updated" update="text-version" value="1.0.6" date-time="2022-11-04T14:28:19.108Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
+          <note type="updated" update="text-version" value="1.0.7" date-time="2022-12-20T21:50:53.989Z" user="andre">Glossary activated in CG</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -2285,7 +2286,7 @@
               Tara: Songs to the Saviouress</title>. Somerville, MA: Wisdom, 1996.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-094-003-601">
