--- a/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
+++ b/translations/kangyur/translations/094-005_toh728-the_hundred_and_eight_names_of_the_goddess_tara.xml
@@ -33,7 +33,7 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.6 <date>2022</date>
+                <edition>v 1.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -67,7 +67,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-12-14T13:40:01.727Z" user="admin">14/12/2022 13:40:01</note>
+        <note type="lastUpdated" date-time="2022-12-20T22:06:51.634Z" user="admin">20/12/2022 22:06:51</note>
         <tei:note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:56:38.631Z" user="john">v 0.1.0</tei:note>
         <tei:note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:56:38.631Z" user="john">3</tei:note>
         <tei:note type="updated" update="translation-status" value="2.h" date-time="2020-05-28T13:10:21.844Z" user="line-tofte">2.h</tei:note>
@@ -110,6 +110,7 @@
           <tei:note type="updated" update="text-version" value="1.0.4" date-time="2022-12-05T14:30:14.195Z" user="sameer">Included in App v2.5</tei:note>
           <tei:note type="updated" update="text-version" value="1.0.5" date-time="2022-12-06T19:03:48.794Z" user="celso">moved title in tr. from "titleHon" to "titleMain"</tei:note>
           <note type="updated" update="text-version" value="1.0.6" date-time="2022-12-14T13:39:58.426Z" user="martina-cotter">Updated typo to title Tārā­devī­nāmāṣṭaśataka.</note>
+          <note type="updated" update="text-version" value="1.0.7" date-time="2022-12-20T22:06:48.779Z" user="andre">Glossary activated in CG</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -756,7 +757,7 @@
               Tara: Songs to the Saviouress</title>. Somerville: Wisdom Publications, 1996.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-094-005-111">
