--- a/translations/kangyur/translations/057-006_toh147-the_sutra_teaching_the_great_compassion_of_the_tathagatas.xml
+++ b/translations/kangyur/translations/057-006_toh147-the_sutra_teaching_the_great_compassion_of_the_tathagatas.xml
@@ -36,7 +36,7 @@
                 <sponsor ref="sponsors.xml#sponsor-2">Frank ST Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.21 <date>2022</date>
+                <edition>v 1.2.22 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T06:02:04.299Z" user="admin">26/07/2022 06:02:04</note>
+                <note type="lastUpdated" date-time="2022-12-23T16:17:50.02Z" user="admin">23/12/2022 16:17:50</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-02-20T09:16:36.684Z" user="andreas">2.f</note>
@@ -121,6 +121,7 @@
                 <note type="updated" update="text-version" value="1.2.19" date-time="2022-03-17T01:26:37.529Z" user="celso">Fixed missing glossary link</note>
                 <note type="updated" update="text-version" value="1.2.20" date-time="2022-05-23T15:52:09.734Z" user="martina-cotter">Updated milestone 2.634 and accompanying footnote.</note>
                 <note type="updated" update="text-version" value="1.2.21" date-time="2022-07-26T06:01:56.362Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.2.22" date-time="2022-12-23T16:17:47.008Z" user="konchog">Two small fixes to date ranges in intro.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -376,7 +377,7 @@
                             </title> in the section on buddha activity,
                             which follows the famous analogy of the cleansing of the beryl
                             gem.</note> Nevertheless, the sūtra is listed as one of ten sūtras on buddha nature by Tibetan authors such as Dölpopa Sherap Gyaltsen
-                            (<foreign xml:lang="Bo-Ltn">dol po pa shes rab rgyal mtshan</foreign>, 1292–361)<note place="end" xml:id="UT22084-057-006-16"> See Stearns (1999), p. 178, note 12.</note> and Jamgön Kongtrül Lodrö Thayé (<foreign xml:lang="Bo-Ltn">’jam mgon kong sprul blo gros mtha’ yas</foreign>, 1813–99),<note place="end" xml:id="UT22084-057-006-17"> See Hookham (1991), p. 267.</note> and the Tibetan commentarial
+                            (<foreign xml:lang="Bo-Ltn">dol po pa shes rab rgyal mtshan</foreign>, 1292–1361)<note place="end" xml:id="UT22084-057-006-16"> See Stearns (1999), p. 178, note 12.</note> and Jamgön Kongtrül Lodrö Thayé (<foreign xml:lang="Bo-Ltn">’jam mgon kong sprul blo gros mtha’ yas</foreign>, 1813–99),<note place="end" xml:id="UT22084-057-006-17"> See Hookham (1991), p. 267.</note> and the Tibetan commentarial
                         tradition offers reasons for linking it to the buddha nature tradition. One is the fact that the sūtra contains the
                         analogy of the threefold purification of a beryl stone, which serves as a metaphor for the successive teachings of the three
                         turnings of the wheel of Dharma as delineated in Tibetan Buddhist hermeneutics.<note place="end" xml:id="UT22084-057-006-20">
@@ -397,7 +398,7 @@
                         subject for future research. However, among the large number of Tibetan commentaries written on the <title xml:lang="Sa-Ltn">Ratnagotra­vibhāga</title>,<note place="end" xml:id="UT22084-057-006-23"> See, e.g., Burchardi (2006) for a provisional
                             list of these commentaries.</note> recent research shows that Marpa Lotsawa (<foreign xml:lang="Bo-Ltn">mar pa lo tsā
                             ba</foreign>, 1012–97)<note place="end" xml:id="UT22084-057-006-24"> See Brunnhölzl (2014).</note> and Gö Lotsawa
-                            (<foreign xml:lang="Bo-Ltn">’gos lo tsā ba</foreign>, 1392–481)<note place="end" xml:id="UT22084-057-006-25"> See Mathes
+                            (<foreign xml:lang="Bo-Ltn">’gos lo tsā ba</foreign>, 1392–1481)<note place="end" xml:id="UT22084-057-006-25"> See Mathes
                             (2003 and 2008). </note> both quote the sūtra at length in their commentaries on this text. </p>
                     <milestone unit="chunk" xml:id="UT22084-057-006-26"/>
                     <p tid="14">This sūtra has received little attention in modern scholarship, the notable exception being its treatment in Ulrich
