--- a/translations/kangyur/translations/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
+++ b/translations/kangyur/translations/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
@@ -29,7 +29,7 @@
         <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -67,7 +67,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-12-15T20:31:37.115Z" user="admin">15/12/2022 20:31:37</note>
+        <note type="lastUpdated" date-time="2022-12-27T14:30:07.277Z" user="admin">27/12/2022 14:30:07</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-01T15:51:24.372Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:50:56.023Z" user="line-tofte">3</note>
@@ -111,6 +111,7 @@
           <note type="updated" update="translation-status" value="1.a" date-time="2022-12-13T18:56:01.072Z" user="martina-cotter">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-12-13T18:56:01.072Z" user="martina-cotter">First published version</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-12-15T20:31:34.159Z" user="martina-cotter">Updated typo.</note>
+          <note type="updated" update="text-version" value="1.0.2" date-time="2022-12-27T14:30:04.405Z" user="andre">Glossary matching revised-activated in CG</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -863,7 +864,7 @@
             1950.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-066-017-248">
@@ -887,22 +888,13 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-066-017-150">
-              <term>blessed one</term>
-              <term xml:lang="Bo-Ltn">bcom ldan ’das </term>
-              <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
-              <term xml:lang="Sa-Ltn">bhagavān</term>
-              <term type="definition">In Buddhist literature, an epithet applied to buddhas, most
-                often to Śākyamuni. The Sanskrit term generally means “possessing fortune,” but in
-                specifically Buddhist contexts it implies that a buddha is in possession of six
-                auspicious qualities (<foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign>)
-                associated with complete awakening. The Tibetan term—where <foreign xml:lang="Bo-Ltn" type="term">bcom</foreign> is said to refer to “subduing” the
-                four māras, <foreign xml:lang="Bo-Ltn" type="term">ldan</foreign> to “possessing”
-                the great qualities of buddhahood, and <foreign xml:lang="Bo-Ltn" type="term">’das</foreign> to “going beyond” saṃsāra and nirvāṇa—possibly reflects the
-                commentarial tradition where the Sanskrit <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> is interpreted, in addition, as “one who destroys the four
-                māras.” This is achieved either by reading <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> as <foreign xml:lang="Sa-Ltn" type="term">bhagnavat</foreign> (“one who broke”), or by tracing the word <foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign> to the root <foreign xml:lang="Sa-Ltn" type="term">√bhañj</foreign> (“to break”).</term>
-              <term type="alternative"/>
-            </gloss>
+                        <gloss xml:id="UT22084-066-017-150" type="term" mode="match">
+                            <term>blessed one</term>
+                            <term xml:lang="Bo-Ltn">bcom ldan ’das</term>
+                            <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="Sa-Ltn">bhagavān</term>
+                            <term type="definition">In Buddhist literature, an epithet applied to buddhas, most often to Śākyamuni. The Sanskrit term generally means “possessing fortune,” but in specifically Buddhist contexts it implies that a buddha is in possession of six auspicious qualities (<foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign>) associated with complete awakening. The Tibetan term—where <foreign xml:lang="Bo-Ltn" type="term">bcom</foreign> is said to refer to “subduing” the four māras, <foreign xml:lang="Bo-Ltn" type="term">ldan</foreign> to “possessing” the great qualities of buddhahood, and <foreign xml:lang="Bo-Ltn" type="term">’das</foreign> to “going beyond” saṃsāra and nirvāṇa—possibly reflects the commentarial tradition where the Sanskrit <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> is interpreted, in addition, as “one who destroys the four māras.” This is achieved either by reading <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> as <foreign xml:lang="Sa-Ltn" type="term">bhagnavat</foreign> (“one who broke”), or by tracing the word <foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign> to the root <foreign xml:lang="Sa-Ltn" type="term">√bhañj</foreign> (“to break”).</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-066-017-151">
@@ -931,17 +923,13 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-066-017-153">
-              <term>limit of reality</term>
-              <term xml:lang="Bo-Ltn">yang dag pa’i mtha’ </term>
-              <term xml:lang="bo">ཡང་དག་པའི་མཐའ།</term>
-              <term xml:lang="Sa-Ltn">bhūtakoṭi</term>
-              <term type="definition">This term has three meanings: (1) the ultimate nature, (2) the
-                experience of the ultimate nature, and (3) the quiescent state of a worthy one
-                  (<foreign xml:lang="Sa-Ltn" type="term">arhat</foreign>) to be avoided by
-                bodhisattvas.</term>
-              <term type="alternative"/>
-            </gloss>
+                        <gloss xml:id="UT22084-066-017-153" type="term" mode="match">
+                            <term>limit of reality</term>
+                            <term xml:lang="Bo-Ltn">yang dag pa’i mtha’</term>
+                            <term xml:lang="bo">ཡང་དག་པའི་མཐའ།</term>
+                            <term xml:lang="Sa-Ltn">bhūtakoṭi</term>
+                            <term type="definition">This term has three meanings: (1) the ultimate nature, (2) the experience of the ultimate nature, and (3) the quiescent state of a worthy one (<foreign xml:lang="Sa-Ltn" type="term">arhat</foreign>) to be avoided by bodhisattvas.</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-066-017-154">
