--- a/translations/kangyur/translations/072-002_toh302-what_medicants_hold_most_dear.xml
+++ b/translations/kangyur/translations/072-002_toh302-what_medicants_hold_most_dear.xml
@@ -30,7 +30,7 @@
         <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -64,7 +64,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-12-13T18:29:38.712Z" user="admin">13/12/2022 18:29:38</note>
+        <note type="lastUpdated" date-time="2022-12-27T14:37:55.768Z" user="admin">27/12/2022 14:37:55</note>
         <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="translation-status" value="4" date-time="2020-10-02T13:50:21.606Z" user="line-tofte">4</tei:note>
         <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:50:21.606Z" user="line-tofte">0.0.1</tei:note>
         <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="translation-status" value="3" date-time="2020-11-30T09:56:09.316Z" user="line-tofte">3</tei:note>
@@ -102,6 +102,7 @@
           <note type="updated" update="text-version" value="0.0.4" date-time="2022-12-12T20:38:53.606Z" user="konchog">Numerous fixes and adjustments throughout, documented in an email.</note>
           <note type="updated" update="translation-status" value="1.a" date-time="2022-12-13T18:29:32.707Z" user="martina-cotter">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-12-13T18:29:32.707Z" user="martina-cotter">First published version</note>
+          <note type="updated" update="text-version" value="1.0.1" date-time="2022-12-27T14:37:52.899Z" user="andre">Glossary matching revised - activated in CG</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -899,15 +900,13 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-072-002-124">
-              <term>the Sugata’s victory banner</term>
-              <term xml:lang="Bo-Ltn" status="verified">bde bar gshegs pa’i rgyal mtshan </term>
-              <term xml:lang="bo">བདེ་བར་གཤེགས་པའི་རྒྱལ་མཚན།</term>
-              <term xml:lang="Sa-Ltn" status="verified">sugatadhvaja</term>
-              <term type="alternative">Well-Gone One’s victory banner</term>
-              <term type="definition">This refers to the three monastic robes, which are the outer
-                signs of being a monastic follower of the Buddha.</term>
-            </gloss>
+                        <gloss xml:id="UT22084-072-002-124" type="term" mode="match">
+                            <term>Well-Gone One’s victory banner</term>
+                            <term xml:lang="Bo-Ltn" status="verified">bde bar gshegs pa’i rgyal mtshan</term>
+                            <term xml:lang="bo">བདེ་བར་གཤེགས་པའི་རྒྱལ་མཚན།</term>
+                            <term xml:lang="Sa-Ltn" status="verified">sugatadhvaja</term>
+                            <term type="definition">This refers to the three monastic robes, which are the outer signs of being a monastic follower of the Buddha.</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-072-002-125">
