--- a/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
+++ b/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
@@ -4,15 +4,14 @@
    <teiHeader>
       <fileDesc>
          <titleStmt>
-            <title type="mainTitle" xml:lang="en">The Questions of Subāhu</title>
-            <title type="mainTitle" xml:lang="Sa-Ltn">Subāhu­paripṛcchā</title>
-            <title type="mainTitle" xml:lang="Bo-Ltn">dpung bzang gis zhus pa</title>
+            <title type="mainTitle" xml:lang="en">The Tantra of Subāhu’s Questions</title>
+            <title type="mainTitle" xml:lang="Sa-Ltn">Subāhu­paripṛcchā­tantra</title>
+            <title type="mainTitle" xml:lang="Bo-Ltn">dpung bzang gis zhus pa’i rgyud</title>
             <title type="mainTitle" xml:lang="bo">དཔུང་བཟང་གིས་ཞུས་པ།</title>
-            <title type="longTitle" xml:lang="bo">འཕགས་པ་དཔུང་བཟང་གིས་ཞུས་པ་ཞེས་བྱ་བའི་རྒྱུད།</title>
-            <title type="longTitle" xml:lang="en">The Noble Tantra “The Questions of Subāhu”</title>
+            <title type="longTitle" xml:lang="en">The Noble Tantra “Subāhu’s Questions”</title>
             <title type="longTitle" xml:lang="Sa-Ltn">Ārya­subāhu­pari­pṛcchānāma­tantra</title>
-            <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dpung bzang gis zhus pa zhes bya
-               ba’i rgyud</title>
+            <title type="longTitle" xml:lang="Bo-Ltn">’phags pa dpung bzang gis zhus pa zhes bya ba’i rgyud</title>
+            <title type="longTitle" xml:lang="bo">འཕགས་པ་དཔུང་བཟང་གིས་ཞུས་པ་ཞེས་བྱ་བའི་རྒྱུད།</title>
             <author role="translatorMain" ref="eft:team-33">Translated by Dr. Lozang Jamspal, Kaia
                Fischer, and Erin Sperry of the Tibetan Classics Translators Guild of New York, under
                the patronage and supervision of 84000: Translating the Words of the Buddha</author>
@@ -28,7 +27,7 @@
             <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
          </titleStmt>
          <editionStmt>
-                <edition>v 1.0.4 <date>2022</date>
+                <edition>v 1.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
          <publicationStmt status="1.a">
@@ -68,7 +67,7 @@
             </bibl>
          </sourceDesc>
          <notesStmt>
-            <note type="lastUpdated" date-time="2022-12-19T15:34:05.1Z" user="admin">19/12/2022 15:34:05</note>
+            <note type="lastUpdated" date-time="2022-12-28T14:12:06.292Z" user="admin">28/12/2022 14:12:06</note>
             <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T08:42:54.93Z" user="line-tofte">0.0.1</note>
             <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">2.h</note>
             <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">Auto
@@ -110,13 +109,15 @@
             <note type="updated" update="text-version" value="0.0.4" date-time="2022-11-24T10:28:16.326Z" user="line-tofte">Auto (update-contributors)</note>
             <note type="updated" update="text-version" value="0.0.5" date-time="2022-11-24T10:28:48.636Z" user="line-tofte">Auto (update-contributors)</note>
             <note type="updated" update="text-version" value="0.0.6" date-time="2022-11-24T10:29:17.126Z" user="line-tofte">Auto (update-contributors)</note>
-             <note type="updated" update="text-version" value="0.0.7" date-time="2022-12-01T11:04:36.278Z" user="line-tofte">Auto (update-contributors)</note>
-             <note type="updated" update="translation-status" value="1.a" date-time="2022-12-09T22:59:56.854Z" user="martina-cotter">1.a</note>
-             <note type="updated" update="text-version" value="1.0.0" date-time="2022-12-09T22:59:56.854Z" user="martina-cotter">First published version</note>
-             <note type="updated" update="text-version" value="1.0.1" date-time="2022-12-09T23:07:31.478Z" user="martina-cotter">Updated typo.</note>
-             <note type="updated" update="text-version" value="1.0.2" date-time="2022-12-09T23:08:35.133Z" user="martina-cotter">Updated typo.</note>
-             <note type="updated" update="text-version" value="1.0.3" date-time="2022-12-12T18:00:22.948Z" user="martina-cotter">Added tantra warning.</note>
-             <note type="updated" update="text-version" value="1.0.4" date-time="2022-12-19T15:34:02.16Z" user="konchog">Minor fixes and with Celso's help split two different 8-line verses into quatrains with their own milestone markers.</note>
+            <note type="updated" update="text-version" value="0.0.7" date-time="2022-12-01T11:04:36.278Z" user="line-tofte">Auto (update-contributors)</note>
+            <note type="updated" update="translation-status" value="1.a" date-time="2022-12-09T22:59:56.854Z" user="martina-cotter">1.a</note>
+            <note type="updated" update="text-version" value="1.0.0" date-time="2022-12-09T22:59:56.854Z" user="martina-cotter">First published version</note>
+            <note type="updated" update="text-version" value="1.0.1" date-time="2022-12-09T23:07:31.478Z" user="martina-cotter">Updated typo.</note>
+            <note type="updated" update="text-version" value="1.0.2" date-time="2022-12-09T23:08:35.133Z" user="martina-cotter">Updated typo.</note>
+            <note type="updated" update="text-version" value="1.0.3" date-time="2022-12-12T18:00:22.948Z" user="martina-cotter">Added tantra warning.</note>
+            <note type="updated" update="text-version" value="1.0.4" date-time="2022-12-19T15:34:02.16Z" user="konchog">Minor fixes and with Celso's help split two different 8-line verses into quatrains with their own milestone markers.</note>
+            <note type="title" date-time="2022-12-28T14:12:00.365Z" user="john">Not to be confused with the sūtra Subāhuparipṛccha (lag bzangs kyis zhus pa), Toh 70.</note>
+             <note type="updated" update="text-version" value="1.0.5" date-time="2022-12-28T14:12:00.365Z" user="john">Auto (update-titles)</note>
          </notesStmt>
       </fileDesc>
    </teiHeader>
