--- a/translations/kangyur/translations/072-009_toh309_sutra_on_Impermanence.xml
+++ b/translations/kangyur/translations/072-009_toh309_sutra_on_Impermanence.xml
@@ -21,7 +21,7 @@
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-306">Simeon Joffe</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.22.6 <date>2021</date>
+                <edition>v 1.22.8 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -54,7 +54,7 @@
             
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-04-19T15:37:03.067Z" user="celso">19/04/2021 15:37:03</note>
+                <note type="lastUpdated" date-time="2022-12-29T16:51:46.029Z" user="admin">29/12/2022 16:51:46</note>
             <note type="updated" update="text-version" value="v 1.21" date-time="2019-06-18T16:25:59.158Z" user="celso">v 1.21 2019</note>
                 <note type="updated" update="text-version" value="v 1.22" date-time="2019-06-21T14:44:35.078Z" user="celso">v 1.22 2019</note>
 <note type="updated" update="text-version" value="v 1.22.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
@@ -62,7 +62,7 @@
     <note type="updated" update="text-version" value="1.22.3" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
     <note type="updated" update="text-version" value="1.22.4" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
     <note type="updated" update="text-version" value="1.22.5" date-time="2021-01-04T22:43:25.937Z" user="laura">Updated colophon to Bandé</note>
-    <note type="updated" update="text-version" value="1.22.6" date-time="2021-02-10T20:01:02.659Z" user="celso">"scholar" to "preceptor" in colophon</note>
+    <note type="updated" update="text-version" value="1.22.6" date-time="2021-02-10T20:01:02.659Z" user="celso">"scholar" to "preceptor" in colophon</note>    <note type="updated" update="text-version" value="1.22.7" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.22.8" date-time="2022-12-29T16:51:43.203Z" user="konchog">Several fixes throughout all sections, as part of review of early published texts.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -81,7 +81,7 @@
                 <milestone unit="chunk" xml:id="UT22084-072-009-1"/>
                 <p tid="1">In this brief sūtra, the Buddha reminds his followers of one of the principal characteristics of
                     saṃsāric existence: the reality of impermanence. The four things cherished most in this world, the Buddha
-                    says—namely good health, youth, prosperity, and life—are all impermanent. He closes his teaching with a verse,
+                    says—namely, good health, youth, prosperity, and life—are all impermanent. He closes his teaching with a verse,
                     asking how beings, afflicted as they are by impermanence, can take delight in anything desirable, and
                     indirectly urging his disciples to practice the path of liberation.</p>
             </div>
@@ -106,7 +106,7 @@
                         and their no-self, or lack of an inherent substance (<foreign type="term" xml:lang="Sa-Ltn">anātman</foreign>). It is the clear understanding of the reality of these facts of life that can
                         bring about a profound and essential change in a person’s worldview, marking the point of entry to the
                         path to liberation.<note place="end" xml:id="UT22084-072-009-28">See <title xml:lang="en">The
-                                Three Basic Facts of Existence</title> (The Wheel, Publication no. 186, 187) (details in
+                                Three Basic Facts of Existence</title> (The Wheel, Publication no. 186, p. 187) (details in
                             bibliography).</note> Impermanence is also one of the four seals of the Buddha’s teaching (comprising
                         these three characteristics of existence and a fourth principle, that nirvāṇa is peace), often described
                         as summarizing or epitomizing the Buddhadharma, and more particularly as the criteria that together enable
@@ -119,10 +119,10 @@
                     <milestone unit="chunk" xml:id="UT22084-072-009-4"/>
                     <p tid="5">The Tibetan canon contains two sūtras with the title <title xml:lang="en">Sūtra on Impermanence
                             </title>(<title xml:lang="Bo-Ltn">mi rtag pa nyid kyi mdo</title>), both found in the same section of
-                        the Kangyur (mdo sde, Toh. 309 and 310<ref rend="pending" target="https://read.84000.co/translation/toh310.html" inst="add note, add bibl"/>). The sūtra translated here is the first, the shorter of the two.
+                        the Kangyur (mdo sde, Toh 309 and 310<ref rend="pending" target="https://read.84000.co/translation/toh310.html" inst="add note, add bibl"/>). The sūtra translated here is the first, the shorter of the two.
                         Sūtras with equivalent titles are also found in other Buddhist canons, but their contents differ
                         substantially from the one translated here. The Chinese Tripiṭaka, for instance, contains two sūtras so
-                        entitled (Taishō Nos. 801 and 759), and in the Samyutta Nikāya of the Pāli canon, the collection of
+                        entitled (Taishō nos. 801 and 759), and in the Samyutta Nikāya of the Pāli canon, the collection of
                         discourses grouped by themes, there are a number of different texts with the title <title xml:lang="en">Sutta on Impermanence</title> (P. <title xml:lang="Sa-Ltn">Aniccasutta</title>).<note place="end" xml:id="UT22084-072-009-30">For instance Samyutta Nikaya 22.45 and 46, and Samyutta Nikaya
                             36.9.</note>
                     </p>
@@ -131,7 +131,7 @@
                     <head type="section" tid="23">Note on the translation</head>
                     <milestone unit="chunk" xml:id="UT22084-072-009-5"/>
                     <p tid="6">The content of this sūtra is rather straightforward and its interpretation does not pose any major
-                        difficulties. One particular term, however, did present a problem of translation: the Tibetan <foreign type="term" xml:lang="Bo-Ltn">dben pa</foreign>, which commonly translates the Sanskrit <foreign type="term" xml:lang="Sa-Ltn">viveka / vivikta </foreign>and is usually related to concepts of
+                        difficulties. One particular term, however, did present a problem of translation: the Tibetan <foreign type="term" xml:lang="Bo-Ltn">dben pa</foreign>, which commonly translates the Sanskrit <foreign type="term" xml:lang="Sa-Ltn">viveka</foreign>/<foreign type="term" xml:lang="Sa-Ltn">vivikta </foreign>and is usually related to concepts of
                         isolation and seclusion. Here it seems to refer more specifically to the act of picking something out,
                         separating it from other things and thus singling it out from them as special.</p>
                 </div>
@@ -166,7 +166,7 @@
                     <milestone unit="chunk" xml:id="UT22084-072-009-11"/>
                     <p tid="12">“Monks, prosperity is appealing, singled out, considered valuable, pleasant, and highly
                         appreciated by everyone. Prosperity, however, ends with its decline. Monks, the decline of prosperity is
-                        neither appealing, nor is it singled out, nor considered valuable, pleasant, or highly appreciated by
+                        neither appealing, nor is it singled out, considered valuable, pleasant, or highly appreciated by
                         anyone. <ref cRef="F.155.b" type="folio" xml:id="UT22084-072-009-33"/>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-072-009-12"/>
@@ -215,12 +215,12 @@
                         bka’ ’gyur (dpe bsdur ma) [Comparative Edition of the Kangyur], krung go’i bod rig pa zhib ’jug ste gnas
                         kyi bka’ bstan dpe sdur khang (The Tibetan Tripitaka Collation Bureau of the China Tibetology Research
                         Center). 108 volumes. Beijing: krung go’i bod rig pa dpe skrun khang (China Tibetology Publishing House),
-                        2006–9, vol. 72, 434-436.</bibl>
-                    <bibl xml:id="UT22084-072-009-19">Nyanaponika Thera (transl.).<title xml:lang="en"> Anicca Sutta:
+                        2006–9, vol. 72, 434–36.</bibl>
+                    <bibl xml:id="UT22084-072-009-19">Nyanaponika Thera, transl.<title xml:lang="en"> Anicca Sutta:
                             Impermanent</title> (SN 36.9), translated from the Pali. <title xml:lang="en">Access to
-                            Insight</title>, 30 June 2010, <ref target="http://www.accesstoinsight.org/tipitaka/sn/sn36/sn36.009.nypo.html">www.accesstoinsight.org</ref> . Retrieved on 10 May 2013.</bibl>
+                            Insight</title>, 30 June 2010, <ref target="http://www.accesstoinsight.org/tipitaka/sn/sn36/sn36.009.nypo.html">www.accesstoinsight.org</ref>. Retrieved on 10 May 2013.</bibl>
                     <bibl xml:id="UT22084-072-009-20">“The Three Basic Facts of Existence: I. Impermanence (Anicca), with a
-                        preface by Nyanaponika Thera,” <title xml:lang="en">Access to Insight</title>, 2 December 2011, <ref target="http://www.accesstoinsight.org/lib/authors/various/wheel186.html">www.accesstoinsight.org</ref> . Retrieved on 10 May 2013.</bibl>
+                        preface by Nyanaponika Thera.” <title xml:lang="en">Access to Insight</title>, 2 December 2011, <ref target="http://www.accesstoinsight.org/lib/authors/various/wheel186.html">www.accesstoinsight.org</ref>. Retrieved on 10 May 2013.</bibl>
                 </div>
             </div>
             <div type="glossary">
@@ -254,12 +254,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-072-009-24">
+                        <gloss xml:id="UT22084-072-009-24" type="term" mode="match">
                             <term>suffering</term>
-                            <term xml:lang="Bo-Ltn">bdug bsngal </term>
-                            <term xml:lang="bo">བདུག་བསྔལ།</term>
+                            <term xml:lang="Bo-Ltn">sdug bsngal</term>
+                            <term xml:lang="bo">སྡུག་བསྔལ།</term>
                             <term xml:lang="Sa-Ltn">duḥkha</term>
-                            <term type="alternative" xml:lang="en">unsatisfactoriness</term>
+                            <term type="alternative">unsatisfactoriness</term>
                         </gloss>
                     </item>
                     <item>
