--- a/translations/kangyur/translations/062-002_toh202-evaluating_whether_progress_is_certain_or_uncertain.xml
+++ b/translations/kangyur/translations/062-002_toh202-evaluating_whether_progress_is_certain_or_uncertain.xml
@@ -35,7 +35,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -79,7 +79,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-10-16T10:22:59.21Z" user="admin">16/10/2022 10:22:59</note>
+                                <note type="lastUpdated" date-time="2023-01-02T10:39:48.32Z" user="admin">02/01/2023 10:39:48</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:17:33.326Z" user="mike">2.d</note>
@@ -122,6 +122,7 @@
                             <note type="updated" update="text-version" value="1.0.2" date-time="2022-09-30T14:40:56.958Z" user="andre">Glossary status updated, now active in CG</note>
                             <note type="updated" update="translation-status" value="1" date-time="2022-10-16T10:22:53.699Z" user="sameer">1</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2022-10-16T10:22:53.699Z" user="sameer">Included in App v2.4</note>
+                            <note type="updated" update="text-version" value="1.0.4" date-time="2023-01-02T10:39:45.407Z" user="john">Typo corrected in 1.2.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -278,7 +279,7 @@
                                         <milestone unit="chunk" xml:id="UT22084-062-002-19"/>
                                         <p tid="22">Then Mañjuśrī Kumārabhūta asked the Blessed One, “How can one
                                                 evaluate whether, for these bodhisattvas, it is uncertain that they will attain unsurpassable, perfect awakening, for
-                                                they may turn back from the path leading to unsurpassable wisdom? And how may can evaluate
+                                                they may turn back from the path leading to unsurpassable wisdom? And how can one evaluate
                                                 whether, for those bodhisattvas, it is certain that they will attain unsurpassable, perfect awakening, and they will not turn back from
                                                 the path leading to unsurpassable wisdom? Please teach the Dharma discourse that is called
                                                 <distinct>evaluating whether a bodhisattva’s progress is certain or uncertain</distinct>, so that I will understand
