--- a/translations/kangyur/placeholders/089-012_toh555-the_sutra_the_supremely_victorious_golden_light.xml
+++ b/translations/kangyur/placeholders/089-012_toh555-the_sutra_the_supremely_victorious_golden_light.xml
@@ -21,11 +21,11 @@
                 <sponsor ref="sponsors.xml#sponsor-181">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2019</date>
+                <edition>v 0.0.8 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-089-012"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-03T09:52:47.077Z" user="admin">03/01/2023 09:52:47</note>
+                <note type="lastUpdated" date-time="2023-01-03T09:53:32.326Z" user="admin">03/01/2023 09:53:32</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-06T13:46:43.307Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-07T13:58:34.151Z" user="line-tofte">Auto (update-contributors)</note>
@@ -52,6 +52,8 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-26T07:31:13.318Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-01-03T09:52:41.453Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-03T09:52:41.453Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-01-03T09:53:26.696Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-03T09:53:26.696Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
