--- a/translations/kangyur/placeholders/089-012_toh555-the_sutra_the_supremely_victorious_golden_light.xml
+++ b/translations/kangyur/placeholders/089-012_toh555-the_sutra_the_supremely_victorious_golden_light.xml
@@ -9,19 +9,20 @@
                 <title type="otherTitle" xml:lang="en">[Translated from the Chinese]</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gser 'od dam pa mchog tu rnam par rgyal ba'i mdo sde'i rgyal po zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="zh">《金光明最勝王經》</title>
-                <author role="translatorMain" ref="contributors.xml#team-22"/>
-                <author role="translatorEng" ref="contributors.xml#person-142">Peter Alan Roberts</author>
-                <editor role="reviser" ref="contributors.xml#person-143">Emily Bower</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-143">Emily Bower</consultant>
-                <editor role="associateEditor" ref="contributors.xml#person-362">Xiaolong Diao</editor>
-                <editor role="projectEditor" ref="contributors.xml#person-250">Rory Lindsay</editor>
-                <consultant role="advisor" ref="contributors.xml#person-147">Ling Lung Chen</consultant>
-                <consultant role="advisor" ref="contributors.xml#person-326">Wang Chipan</consultant>
-                <editor role="proofreader" ref="contributors.xml#person-52">Tracy Davis</editor>
+                <author role="translatorMain" ref="eft:team-22"/>
+                <author role="translatorEng" ref="eft:person-142">Peter Alan Roberts</author>
+                <editor role="reviser" ref="eft:person-143">Emily Bower</editor>
+                <consultant role="projectManager" ref="eft:person-143">Emily Bower</consultant>
+                <editor role="associateEditor" ref="eft:person-362">Xiaolong Diao</editor>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                <consultant role="advisor" ref="eft:person-147">Ling Lung Chen</consultant>
+                <consultant role="advisor" ref="eft:person-326">Wang Chipan</consultant>
+                <editor role="proofreader" ref="eft:person-52">Tracy Davis</editor>
+                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
                 <sponsor ref="sponsors.xml#sponsor-181">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2019</date>
+                <edition>v 0.0.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -41,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-03T09:53:32.326Z" user="admin">03/01/2023 09:53:32</note>
+                <note type="lastUpdated" date-time="2023-01-03T09:55:48.11Z" user="admin">03/01/2023 09:55:48</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-06T13:46:43.307Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-07T13:58:34.151Z" user="line-tofte">Auto (update-contributors)</note>
@@ -54,6 +55,7 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-03T09:52:41.453Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-01-03T09:53:26.696Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-03T09:53:26.696Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-01-03T09:55:42.561Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
