--- a/translations/kangyur/placeholders/089-012_toh555-the_sutra_the_supremely_victorious_golden_light.xml
+++ b/translations/kangyur/placeholders/089-012_toh555-the_sutra_the_supremely_victorious_golden_light.xml
@@ -19,10 +19,11 @@
                 <consultant role="advisor" ref="eft:person-326">Wang Chipan</consultant>
                 <editor role="proofreader" ref="eft:person-52">Tracy Davis</editor>
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
+                <editor role="associateEditor" ref="eft:person-430">H.S. Sum Cheuk Shing</editor>
                 <sponsor ref="sponsors.xml#sponsor-181">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2019</date>
+                <edition>v 0.0.10 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -42,7 +43,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-03T09:55:48.11Z" user="admin">03/01/2023 09:55:48</note>
+                <note type="lastUpdated" date-time="2023-01-03T09:59:30.07Z" user="admin">03/01/2023 09:59:30</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-06T13:46:43.307Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-07T13:58:34.151Z" user="line-tofte">Auto (update-contributors)</note>
@@ -56,6 +57,7 @@
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-01-03T09:53:26.696Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-03T09:53:26.696Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-01-03T09:55:42.561Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-01-03T09:59:24.417Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
