--- a/translations/kangyur/placeholders/064-004_toh234,658,1064-the_essence_of_all_the_nagas_the_great_cloud_chapter_on_the_mandala_of_wind.xml
+++ b/translations/kangyur/placeholders/064-004_toh234,658,1064-the_essence_of_all_the_nagas_the_great_cloud_chapter_on_the_mandala_of_wind.xml
@@ -4,28 +4,25 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sprin chen po rlung gi dkyil 'khor gyi le'u klu thams cad kyi snying po'i mdo/</title>
+                <title type="mainTitle" xml:lang="en">The Essence of All the Nāgas, The Great Cloud Chapter on the Array of Winds</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">mahāmeghavāyumaṇḍala­parivarta­sarvanāgahṛdayasūtra</title>
-                <title type="mainTitle" xml:lang="en">The Essence of All the Nāgas, The Great Cloud Chapter on the Maṇḍala of Wind</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sprin chen po rlung gi dkyil 'khor gyi le'u klu thams cad kyi snying po zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāmeghavāyumaṇḍala­parivartasarva­nāgahṛdaya­nāmamahāyānasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sprin chen po rlung gi dkyil 'khor gyi le'u klu thams cad kyi snying po'i mdo/</title>
+                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Essence of All the Nāgas, The Great Cloud Chapter on the Array of Winds”</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">āryamahāmeghavāyumaṇḍala­parivartasarva­nāgahṛdaya­nāmamahāyānasūtra</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">'phags pa sprin chen po rlung gi dkyil 'khor gyi le'u klu thams cad kyi snying po zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="en">[Note: the Sanskrit titles of Toh 658 and 1064 have °vātu° instead of °vāyu°]</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">klu thams cad kyi snying po theg pa chen po mdo/</title>
+                <title type="otherTitle" xml:lang="en">[Note: the Sanskrit title of Toh 234 has °vātu° instead of °vāyu°]</title>
                 <title type="otherTitle" xml:lang="en">The Mahāyāna Sūtra, Essence of All the Nāgas</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">mahāmeghavātamaṇḍala­sarvanāgahṛdaya</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sprin chen po rlung gi dkyil 'khor gyi le'u klu thams cad kyi snying po zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāmeghavātamaṇḍala­sarvanāgahṛdayanāma­mahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">āryamahāmeghavāyumaṇḍalaparivartasarvanāgahṛdayanāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="en">[Note: the Sanskrit title of Toh 234 has °vātu° instead of °vāyu°]</title>
-                <title type="otherTitle" xml:lang="en">The Sūtra of the Essence of All the Nāgas, The Great Cloud Chapter on the Maṇḍala of Wind</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">mahāmeghavāta­maṇḍalasarva­nāgahṛdayasūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sprin chen po rlung gi dkyil 'khor gyi le'u klu thams cad kyi snying po zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāmeghavāta­maṇḍala­sarvanāgahṛdaya­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">mahāmeghavāta­maṇḍalasarva­nāgahṛdayasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">āryamahāmeghavāyumaṇḍalaparivartasarvanāgahṛdayanāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="en">[Note: the Sanskrit title of Toh 234 has °vātu° instead of °vāyu°]</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">klu thams cad kyi snying po theg pa chen po mdo/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sprin chen po rlung gi dkyil 'khor gyi le'u klu thams cad kyi snying po zhes bya ba theg pa chen po'i mdo/</title>
             </titleStmt>
             <editionStmt>
-                <edition>0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -64,8 +61,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-03-26T11:33:21.183Z" user="john">26/03/2020 11:33:21</note>
-<note type="updated" update="text-version" value="0.0.2" date-time="2020-03-26T11:37:06.983Z" user="john">Problem in encoding resolved</note>
+                <note type="lastUpdated" date-time="2023-01-04T19:44:54.615Z" user="admin">04/01/2023 19:44:54</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-03-26T11:37:06.983Z" user="john">Problem in encoding resolved</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-01-04T19:44:53.145Z" user="john">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
